# DANPI

./: .gitignore  README.md
Serial Implementation/: CMakeLists.txt  log_csv.h  main.cpp
src/: CMakeLists.txt  kernel.cu  log_csv.h  main.cu  parameters.h  utility_macros.h  valid_input_checks.h
